@@ -29,6 +29,7 @@ Bug fixes
  * Parent page link in page search modal no longer disappears on hover (Dan Braghis)
  * ModelAdmin views now consistently call ``get_context_data`` (Andy Babic)
  * Header for search results on the redirects index page now shows the correct count when the listing is paginated (Nick Smith)
+ * ``set_url_paths`` management command is now compatible with Django 1.10 (Benjamin Bach)
 
 Upgrade considerations
 ======================
